@@ -1,13 +1,14 @@
-# $NetBSD: Makefile,v 1.1 2007/08/03 02:34:48 smb Exp $
+# $NetBSD: Makefile,v 1.2 2007/08/17 02:46:30 smb Exp $
 #
 
 DISTNAME=newmail-0.0.10
 PKGNAME=claws-mail-newmail-0.0.10
 CATEGORIES=mail
 MASTER_SITES=	http://claws-mail.org/downloads/plugins/
+PKGREVISION=	1
 
 MAINTAINER=	smb@NetBSD.org
-COMMENT=	Provides various ways to notify the user of new and unread email
+COMMENT=	Write log file info on arriving email
 
 DEPENDS+=	claws-mail>=2.10.0:../../mail/claws-mail
 
